k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-api-service
  namespace: checkout
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: checkout-api
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
